# optcg-scrapper

./: README.md  main.py  output.csv  pyproject.toml
